# project-algoritmos-de-inteligencia-artificial-para-classificacao

./: README.md  draft-project-ia-para-classificacao.ipynb  project-algoritmos-de-ia-para-classificacao-alexandre-lara.ipynb  project-ia-para-classificacao.ipynb  pyproject.toml
